[gd_scene load_steps=7 format=3 uid="uid://cikwsnyq8tae4"]

[ext_resource type="Script" path="res://scripts/weapons/swipe_weapon.gd" id="1_17v6y"]
[ext_resource type="Texture2D" uid="uid://c1ntr0t4f688y" path="res://images/sprites/weapons/__0001_bisturi_maos.png" id="3_q1uam"]

[sub_resource type="Curve2D" id="Curve2D_i218s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2.08165e-12, -60, 2.08165e-12, -60, 2.08165e-12, 60, 60, 1, 0, 0, 0, 0, 2.08165e-12, 60)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw2ix"]
size = Vector2(126, 198)

[sub_resource type="Curve" id="Curve_1jyqf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0290538, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8bco5"]
colors = PackedColorArray(1, 1, 1, 0.392157, 1, 1, 1, 0)

[node name="SwordWeapon" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_17v6y")
hurt_range = Vector2(0.3, 0.5)

[node name="SpriteRoot" type="Marker2D" parent="."]
y_sort_enabled = true

[node name="ArcPath" type="Path2D" parent="."]
y_sort_enabled = true
curve = SubResource("Curve2D_i218s")

[node name="HurtBox" type="Area2D" parent="ArcPath"]
position = Vector2(111, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcPath/HurtBox"]
shape = SubResource("RectangleShape2D_uw2ix")
debug_color = Color(1, 0, 0, 0.419608)

[node name="ArcFollow" type="PathFollow2D" parent="ArcPath"]
position = Vector2(59.9925, 0.5203)
rotation = 1.5653
progress = 95.1738
cubic_interp = false
loop = false

[node name="Sword" type="Sprite2D" parent="ArcPath/ArcFollow"]
position = Vector2(-0.010988, -88.7386)
scale = Vector2(0.766895, 0.766895)
texture = ExtResource("3_q1uam")
offset = Vector2(3.52715, 64.8658)

[node name="TrailLeft" type="Line2D" parent="ArcPath/ArcFollow/Sword"]
z_index = -1
points = PackedVector2Array(-3.95262, 2.23367, -32.6608, 5.9879, -53.5811, 16.3048, -74.5015, 26.6217, -91.5387, 42.1758, -105.968, 57.7443, -120.404, 74.6167, -130.936, 92.8146, -138.846, 108.419)
width = 40.0
width_curve = SubResource("Curve_1jyqf")
gradient = SubResource("Gradient_8bco5")

[node name="TrailRight" type="Line2D" parent="ArcPath/ArcFollow/Sword"]
z_index = -1
scale = Vector2(-1, 1)
points = PackedVector2Array(-3.95262, 2.23367, -32.6608, 5.9879, -53.5811, 16.3048, -74.5015, 26.6217, -91.5387, 42.1758, -105.968, 57.7443, -120.404, 74.6167, -130.936, 92.8146, -138.846, 108.419)
width = 40.0
width_curve = SubResource("Curve_1jyqf")
gradient = SubResource("Gradient_8bco5")
